Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <h3>Support or Contact</h3>
 
-<p>Having trouble with anything about this plugin? Please go to //devbukkit\ and we’ll help you sort it out.</p>
+<p>Having trouble with anything about this plugin? Please go to <a href="http://dev.bukkit.org/server-mods/myceliumplague/" title="bukkit">MyceliumPlague</a> and we’ll help you sort it out.</p>
 
 <h3>Disclaimer</h3>
 
